# Qt_Vision

./: .gitignore  CMakeLists.txt  README.md  server.cpp
Doc/: OPTIMIZATION_AND_PARAM_CONTROL.md
app/: CMakeLists.txt  thread_monitor.cpp
config/: config.host.yaml  config.yaml
edge_board/: .clangd  CMakeLists.txt
edge_board/app/: server.cpp
edge_board/auxiliary/: global_def.hpp  yuv_utils.hpp
edge_board/include/: global_def.hpp  rdkx5_encoder.hpp  scheduler.hpp  thread_monitor.hpp  udp_streamer.hpp  usb_camera.hpp
edge_board/include/hal/: hal_Encoder.hpp  hal_ICamera.hpp
edge_board/src/: SystemMonitor.cpp  rdkx5_encoder.cpp  scheduler.cpp  udp_streamer.cpp  usb_camera.cpp
edge_board/thread/: thread_monitor.cpp  thread_monitor.hpp
host_station/: .clangd  CMakeLists.txt  stream.sdp
host_station/app/: main.cpp
host_station/include/: gstvideoreceiver.h  paramclient.h  systemmonitor.h
host_station/src/: gstvideoreceiver.cpp  paramclient.cpp  systemmonitor.cpp
host_station/ui/: Main.qml
src/include/: SystemMonitor.hpp
src/source/: CMakeLists.txt  SystemMonitor.cpp
